--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,8 @@
         <div id="content">
           <h1>BWriterGuide</h1>
           <h3>সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h3>
+          <h4>***refresh to observer more combinations</h4>
+          <h4>or put some new Bangla words</h4>
           <hr>
           <form action="{{ url_for('predict')}}" method="post">
             <div class="form-row">
