--- a/templates/index.html
+++ b/templates/index.html
@@ -5,35 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon_io/favicon.ico')}}">
-  <title>BWriterGuide</title>
+  <title>Error Generation Module</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='app.css')}}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
+  <style>
+    body {
+      background-image: url('static/2.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
 </head>
 
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">BWriterGuide</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        
-
-    </div>
-  </nav>
+<body {margin-top: 300px;}>
+  
 
 
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div id="content">
-          <h1>BWriterGuide</h1>
-          <h3>সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h3>
+          <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1>
+          <h3 style="color : black; font-weight: bold; font-size: 30px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h3>
+          <h6>***refresh to observe more combinations or just put some new Bangla words</h6>
           <hr>
           <form action="{{ url_for('predict')}}" method="post">
             <div class="form-row">
@@ -42,11 +37,12 @@
               </div>
             </div>
             <hr>
-            <button type="submit" class="btn btn-primary">Predict</button>
+            <button style="color : black; type = submit class= btn btn-primary">Generate Error</button>
           </form>
           
           <hr>
-          <h3 >{{ prediction_text }}</h3>
+          <h3 style="color : red; font-weight: bold; font-size: 30px;">{{ input_text }}</h3>
+          <h3 style="color : green; fornt-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
         </div>
       </div>
     </div>
