--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <div id="content">
           <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1>
           <h3 style="color : black; font-weight: bold; font-size: 30px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h3>
-          <h6>***refresh to observe more combinations or just put some new Bangla words</h6>
+          <h6>***refresh to observe more combinations or write a new sentence</h6>
           <hr>
           <form action="{{ url_for('predict')}}" method="post">
             <div class="form-row">
