--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
           </form>
           
           <hr>
-          <h3 style="color : red; font-weight: bold; font-size: 30px;">{{ input_text }}</h3>
-          <h3 style="color : green; fornt-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
+          <h3 style="color : green; font-weight: bold; font-size: 30px;">{{ input_text }}</h3>
+          <h3 style="color : red; fornt-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
         </div>
       </div>
     </div>
