--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,16 @@
     <div class="row">
       <div class="col-lg-12">
         <div id="content">
-          <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1>
-          <h3 style="color : black; font-weight: bold; font-size: 30px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h3>
+          <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1><br><br>
+          <h6 style="color : blue;  font-weight: bold; font-size: 15px;">উদাহরণসমূহ </h6>
+          <h6 style="color : black;  font-size: 15px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h6>
+          <h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
+          <h6 style="color : black;  font-size: 15px;">ঝড়ে বক মরে ফকিরের কেরামতি বাড়ে</h6>
+            
+          <h6 style="color : black;  font-size: 15px;">সকলের তরে সকলে আমরা প্রত্যেকে মোরা পরের তরে</h6>
+          <!-- <h6 style="color : black;  font-size: 15px;">মানুষ সিংহের প্রশংসা করে, কিন্তু আসলে গাধাকেই পছন্দ করে</h6>   -->
+          <h6 style="color : black;  font-size: 15px;">তৃতীয় বিশ্বের নেতা হওয়ার জন্যে দুটি জিনিশ দরকার : বন্দুক ও কবর</h6> 
+          
           <h6>***refresh to observe more combinations or write a new sentence</h6>
           <hr>
           <form action="{{ url_for('predict')}}" method="post">
