--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
           <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1><br><br>
           <h6 style="color : blue;  font-weight: bold; font-size: 15px;">উদাহরণসমূহ </h6>
           <h6 style="color : black;  font-size: 15px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h6>
-          <h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
-          <h6 style="color : black;  font-size: 15px;">ঝড়ে বক মরে ফকিরের কেরামতি বাড়ে</h6>
+          <!--<h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
+          <h6 style="color : black;  font-size: 15px;">ঝড়ে বক মরে ফকিরের কেরামতি বাড়ে</h6>-->
             
           <h6 style="color : black;  font-size: 15px;">সকলের তরে সকলে আমরা প্রত্যেকে মোরা পরের তরে</h6>
           <!-- <h6 style="color : black;  font-size: 15px;">মানুষ সিংহের প্রশংসা করে, কিন্তু আসলে গাধাকেই পছন্দ করে</h6>   -->
