--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div id="content">
-          <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1><br><br>
+          <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1>
           <h6 style="color : blue;  font-weight: bold; font-size: 15px;">উদাহরণসমূহ </h6>
           <h6 style="color : black;  font-size: 15px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h6>
           <!--<h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
@@ -37,18 +37,15 @@
           <h6 style="color : black;  font-size: 15px;">তৃতীয় বিশ্বের নেতা হওয়ার জন্যে দুটি জিনিশ দরকার : বন্দুক ও কবর</h6> 
           
           <h6>***refresh to observe more combinations or write a new sentence</h6>
-          <hr>
           <form action="{{ url_for('predict')}}" method="post">
             <div class="form-row">
               <div>
                 <textarea name="message" rows="3" cols="150" class = "form-control" required="required"></textarea>
               </div>
             </div>
-            <hr>
             <button style="color : black; type = submit class= btn btn-primary">Generate Error</button>
           </form>
-          
-          <hr>
+
           <h3 style="color : green; font-weight: bold; font-size: 30px;">{{ input_text }}</h3>
           <h3 style="color : red; fornt-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
         </div>
