--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
           <!--<h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
           <h6 style="color : black;  font-size: 15px;">ঝড়ে বক মরে ফকিরের কেরামতি বাড়ে</h6>-->
             
-          <h6 style="color : black;  font-size: 15px;">সকলের তরে সকলে আমরা প্রত্যেকে মোরা পরের তরে</h6>
-          <!-- <h6 style="color : black;  font-size: 15px;">মানুষ সিংহের প্রশংসা করে, কিন্তু আসলে গাধাকেই পছন্দ করে</h6>   -->
-          <h6 style="color : black;  font-size: 15px;">তৃতীয় বিশ্বের নেতা হওয়ার জন্যে দুটি জিনিশ দরকার : বন্দুক ও কবর</h6> 
+          <h6 style="color : black;  font-size: 15px;">সকলের তরে সকলে আমরা প্রত্যেকে মোরা পরের তরে।  </h6>
+          <!-- <h6 style="color : black;  font-size: 15px;">মানুষ সিংহের প্রশংসা করে, কিন্তু আসলে গাধাকেই পছন্দ করে। </h6>   -->
+          <h6 style="color : black;  font-size: 15px;">তৃতীয় বিশ্বের নেতা হওয়ার জন্যে দুটি জিনিশ দরকার : বন্দুক ও কবর। </h6> 
           
           <h6>***refresh to observe more combinations or write a new sentence</h6>
           <form action="{{ url_for('predict')}}" method="post">
