--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
           </form>
 
           <h3 style="color : green; font-weight: bold; font-size: 30px;">{{ input_text }}</h3>
-          <h3 style="color : red; fornt-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
+          <h3 style="color : red; font-weight: bold; font-size: 30px;">{{ prediction_text }}</h3>
         </div>
       </div>
     </div>
