--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
       <div class="col-lg-12">
         <div id="content">
           <h1 style="color : black; font-weight: bold; font-size: 30px;">Error Generation Module</h1>
-          <h6 style="color : blue;  font-weight: bold; font-size: 15px;">উদাহরণসমূহ </h6>
+          <h6 style="color : blue;  font-weight: bold; font-size: 15px;">কিছু সঠিক বাকের উদাহরণ</h6>
           <h6 style="color : black;  font-size: 15px;">সহজে, স্বাচ্ছন্দ্যে বাংলা লিখুন</h6>
           <!--<h6 style="color : black;  font-size: 15px;">আমাদের দেশে হবে সেই ছেলে কবে?</h6>
           <h6 style="color : black;  font-size: 15px;">ঝড়ে বক মরে ফকিরের কেরামতি বাড়ে</h6>-->
